# hand-detection-from-phone-camera

./: CMakeLists.txt  README.md  build.sh  main.cpp  mediamtx.yml  test.drawio
